2006-03-03  Ken Manheimer  <ken.manheimer@gmail.com>

	allout.el: Restablished intermediate missing comment header to
	preserve outline structure.
	(allout-beginning-of-current-entry): Wasn't skipping invisible
	text - fixed.
	(allout-open-topic): Was failing when opening a topic at
	end-of-buffer - fixed.
	(allout-minor-mode): Moved nearer to allout-mode function.

2006-03-02  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-paste-subtree): Removed forgotten (debug)
	form.

2006-03-02  Nick Roberts  <nickrob@snap.net.nz>

	* dframe.el (dframe-frame-mode): Don't burp when menu-bar-lines
	is nil.

	* progmodes/gud.el (gud-speedbar-menu-items): Use
	buffer-local-value and add missing :visible keyword.

	* progmodes/gdb-ui.el (gdb-speedbar-refresh): Quieten
	speedbar-refresh.

2006-03-01  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/reftex-index.el (reftex-index-map): `follow-mouse'
	must be `follow-link'.

	* textmodes/reftex-toc.el (reftex-toc-map): `follow-mouse' must be
	`follow-link'.

	* textmodes/org.el (org-export-as-html): Fix bugs in HTML
	formatting: No nested anchors.
	(org-all-targets): Fix bug with XEmacs compatibility.
	(org-read-date): Add (require 'parse-time).
	(org-set-tags): Fix bug with extra inserted space.
	(org-export-html-style): Define a style class for targets.
	(org-agenda-keymap, org-mouse-map): Add a binding for
	`follow-link'.
	(org-hide-leading-stars): New option.
	(org-hide): New face.
	(org-set-font-lock-defaults): Allow to hide leading stars.
	(org-get-legal-level, org-tr-level): New functions.
	(org-odd-levels-only): New option.
	(org-level-faces, org-paste-subtree, org-convert-to-odd-levels)
	(org-demote, org-promote): Deal with double-star levels.
	(org-convert-to-odd-levels): New command.

2006-03-01  Nick Roberts  <nickrob@snap.net.nz>

	* speedbar.el (speedbar-update-localized-contents): Try to
	preserve window-start.
	(speedbar-update-directory-contents): Try to preserve window-start