@@ -1,3 +1,8 @@
+2006-03-03  Ryan Yeske  <rcyeske@gmail.com>
+
+	* net/rcirc.el (rcirc-url-regexp): Match entire url when it starts
+	with "www".
+
 2006-03-03  Ken Manheimer  <ken.manheimer@gmail.com>
 
 	allout.el: Restablished intermediate missing comment header to
